Generating / Updating Timelines with Server Side Events.
# Pull Request

## Description

* Adding cookie management in the server
* initial build with timeline
* Addition of RabbitMQ for events
* Timeline page in the client
* Adding logging for SSR fetch calls
* Re-using subscriptions of SSE
* Adding a unit tests for all validators
* Adding Integration test for every controller.
* Adding Negative tests
* Using MockMVC instead of Restassured for better async handling.
* Updates for SSE send complete timelines -> WIP: Only send delta's
* Adding legend with definitions of statuses.
* Supporting everything with tests
* Using OffsetDateTimes instead of LocalDateTime to save Zone Data.


## Type of change

- [ ] Bug fix (non-breaking change which fixes an issue)
- [x] New feature (non-breaking change which adds functionality)
- [x] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Documentation update
- [ ] Other (please specify):